Game version 0.2.1 - Fixed size on mobile - Removed standard browser context menu - Made position classes distinguishable - Changed primitives variables to readonly properties - Some display refactorings

--- a/src/client/src/index.css
+++ b/src/client/src/index.css
@@ -1,7 +1,12 @@
+html {
+    height: 100%;
+    width: 100%;
+}
+
 body {
     display: flex;
+    height: 100%;
+    width: 100%;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    width: 100vw;
 }
